[gd_scene load_steps=7 format=3 uid="uid://stcivysk52ie"]

[ext_resource type="Script" path="res://scenes/brick/scripts/brick.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://db465xyaa66b4" path="res://scenes/brick/visuals/One.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dy8bxg728dvar" path="res://scenes/brick/visuals/BlockSmallFull.png" id="3"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(124.434, 61.9452)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(62.7676, 61.469)

[sub_resource type="CircleShape2D" id="3"]
radius = 288.0

[node name="Brick" type="StaticBody2D" groups=["Bricks"]]
collision_layer = 5
collision_mask = 5
script = ExtResource("1")

[node name="CollisionShapeLong" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="CollisionShapeSmall" type="CollisionShape2D" parent="."]
shape = SubResource("2")
disabled = true

[node name="Size" type="Sprite2D" parent="."]
texture = ExtResource("3")

[node name="Type" type="Sprite2D" parent="."]
texture = ExtResource("2")

[node name="ExplosionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource("3")
